# DPR-LLM-TYPESCRIPT

./: .gitignore  README.md  analysis.ipynb  generate_embeddings.py  main.py  mining_curated.py  mining_repo.py  mining_repo_v2.py  pyproject.toml  test_ollama.py  validate_dataset.py
dataset_ground_truth_1/: dataset_metadata.json
dataset_ground_truth_1/Builder/: eggjs_egg__AttributeMetaBuilder.ts  eggjs_egg__ControllerMetaBuilderFactory.ts  eggjs_egg__IndexMetaBuilder.ts  eggjs_egg__ModelMetaBuilder.ts  eggjs_egg__ScheduleMetaBuilder.ts  eggjs_egg__TransactionMetaBuilder.ts
dataset_ground_truth_1/Command/: BabylonJS_Babylon.js__command.ts  BabylonJS_Babylon.js__commandBuffer.ts
dataset_ground_truth_1/Decorator/: eggjs_egg__Column.ts  eggjs_egg__HTTPParam.ts  eggjs_egg__Inject.ts  eggjs_egg__Pointcut.ts  eggjs_egg__index.ts  midwayjs_midway__controller.ts  midwayjs_midway__decoratorManager.ts  midwayjs_midway__metadataManager.ts
dataset_ground_truth_1/Factory/: eggjs_egg__EggContainerFactory.ts  eggjs_egg__EggObjectFactory.ts  eggjs_egg__EggPrototypeCreatorFactory.ts  eggjs_egg__EggPrototypeFactory.ts  eggjs_egg__LoadUnitFactory.ts  eggjs_egg__LoadUnitInstanceFactory.ts
dataset_ground_truth_1/State/: MotiaDev_motia__file-state-adapter.ts  MotiaDev_motia__memory-state-adapter.ts  shardeum_shardeum__shardeumState.ts  shardeum_shardeum__transactionState.ts
dataset_ground_truth_1/Strategy/: eggjs_egg__all.ts  eggjs_egg__base.ts  eggjs_egg__timer.ts  eggjs_egg__worker.ts
