[project]
name = "dpr-llm-typescript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "gitpython>=3.1.45",
    "matplotlib>=3.10.8",
    "numpy>=1.21.6",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
]
